# noema

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1f17c46be0a7_pages_테이블에_embedding_vector_1536_컬럼_추가.py  56cf27c01e51_초기_스키마_users_workspaces_pages_blocks_.py
backend/app/: config.py  main.py
backend/app/api/: ai.py  auth.py  blocks.py  graph.py  pages.py  tags.py  uploads.py  workspace.py  youtube.py
backend/app/core/: auth.py  sse.py
backend/app/db/: neo4j.py  postgres.py
backend/app/models/: __init__.py  base.py  block.py  page.py  tag.py  user.py  workspace.py
backend/app/schemas/: ai.py  block.py  page.py  tag.py  workspace.py
backend/app/services/: ai_service.py  background.py  block_service.py  embedding_service.py  graph_service.py  page_service.py  tag_service.py  workspace_service.py
backend/scripts/: init_neo4j.py
backend/tests/: test_ai_service.py  test_api_ai.py  test_auth.py  test_background.py  test_blocks.py  test_config.py  test_db_postgres.py  test_embedding_service.py  test_graph.py  test_graph_service.py  test_main.py  test_models.py  test_neo4j.py  test_page_embedding.py  test_pages.py  test_schemas_ai.py  test_sse.py  test_tags.py  test_uploads.py  test_workspace.py  test_youtube.py
frontend/: Dockerfile  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: api.ts  (+1 more)
nginx/: nginx.conf
scripts/: start.sh  stop.sh
(+38 files in other folders)
